src/test/deca/context/valid/cast-int-void.deca
// Description:
//    cast int to void
//
// Resultats:
//    
//
// Historique:
//    cree le 06/01/2023

{
    (void)(2);
}