src/test/deca/context/invalid/operation-binaire-superieur-wrong.deca
// Description:
//    Test 3.33 fail avec supérieur 
//
// Resultats:
//    Erreur contextuelle
//    Ligne 12 : The right operand of a comparison operation has to be an int or a float (rule 3.33)
//
// Historique:
//    cree le 06/01/2023

{
    1 > "hello world";
}